# QuantFund

./: .gitignore  ARCHITECTURE.md  BUILD_AND_RUN.md  Cargo.toml  EXECUTIVE_SUMMARY.md  GEMINI.md  HEDGE_FUND_INFRASTRUCTURE.md  INICIO_RAPIDO.md  PROJECT_STATUS.md  ProyectoBase.md  QUICKSTART.md  RUN.bat  check_data.ps1  download_histdata.py  implementation_plan.md  install_deps.ps1  quantfund_analysis.md  setup_dashboard.ps1  setup_dashboard.sh  task.md  task_phase2.md  validate_data.py
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: api_manager.rs  commands.rs  database.rs  engine.rs  finnhub.rs  fred_analysis.rs  fred_commands.rs  fred_persistence.rs  fred_signals_commands.rs  imf_commands.rs  main.rs  mt5_connection.rs  state.rs  worldbank_commands.rs  xauusd_engine.rs
engine/backtest/: Cargo.toml
engine/backtest/src/: config.rs  lib.rs  live_runner.rs  metrics.rs  portfolio.rs  progress.rs  result.rs  runner.rs
engine/core/: Cargo.toml
engine/core/src/: event.rs  instrument.rs  lib.rs  order.rs  position.rs  types.rs
engine/data/: Cargo.toml
engine/data/src/: lib.rs  postgres_provider.rs  provider.rs  replay.rs  synthetic.rs
engine/data/src/fred/: cache.rs  client.rs  error.rs  integration.rs  mod.rs  models.rs  persistence.rs
engine/data/src/imf/: cache.rs  client.rs  endpoints.rs  error.rs  mod.rs  models.rs
engine/data/src/worldbank/: client.rs  error.rs  mod.rs  models.rs
engine/events/: Cargo.toml
engine/events/src/: bus.rs  handler.rs  lib.rs  router.rs
engine/execution/: Cargo.toml
engine/execution/src/: impact.rs  latency.rs  lib.rs  matching.rs  models.rs  oms.rs  queue.rs
engine/mt5/: Cargo.toml
engine/mt5/src/: bridge.rs  config.rs  error.rs  lib.rs  protocol.rs  simulation.rs
engine/risk/: Cargo.toml
engine/risk/src/: config.rs  correlation.rs  engine.rs  lib.rs  limits.rs  var.rs  volatility.rs
engine/strategy/: Cargo.toml
engine/strategy/src/: channel_breakout.rs  context.rs  fred_signal_strategy.rs  lib.rs  mean_reversion.rs  momentum_rsi.rs  python_signal_relay.rs  sma_crossover.rs  traits.rs
research/: anomalies_TEST_20260308_145547.csv  pyproject.toml
research/quantfund/: __init__.py
research/quantfund/assets/: __init__.py
research/quantfund/assets/xauusd/: __init__.py
research/quantfund/assets/xauusd/analysis/: __init__.py  factor_analysis.py
research/quantfund/assets/xauusd/data_feeds/: __init__.py  cot.py  dukascopy.py  etf_flows.py  macro.py
research/quantfund/assets/xauusd/factors/: __init__.py  builder.py
research/quantfund/assets/xauusd/regime/: __init__.py  detector.py
research/quantfund/assets/xauusd/strategies/: __init__.py
research/quantfund/data/: __init__.py  fred_anomaly.py  fred_client.py  fred_features.py  fred_quality.py  fred_semantic_anomaly.py  fred_transform.py  imf_client.py  pipeline.py  test_imf_client.py  worldbank_client.py
research/quantfund/export/: __init__.py  rust_bridge.py
research/quantfund/features/: __init__.py  engine.py
research/quantfund/live/: __init__.py  signal_loop.py
research/quantfund/metrics/: __init__.py  engine.py
research/quantfund/portfolio/: __init__.py  allocator.py
research/quantfund/regime/: __init__.py  hmm_detector.py
research/quantfund/strategies/: __init__.py  fred_cointegration.py  fred_ml_signals.py  fred_signals.py  fred_xauusd_integration.py  signal_backtest.py  signal_store.py  vol_regime_mr.py
research/quantfund/validation/: __init__.py  walk_forward.py
research/scripts/: FRED_PIPELINE_README.md  clean_fred_data.py  detect_fred_anomalies.py  fred_schema.py  generate_signals.py  ingest_fred_data.py  load_mt5_data.py  test_fred_connection.py  update_fred_data.py
research/scripts/migrations/: 001_fred_schema.sql
research/tests/: test_research_layer.py
research/tick_vault_data/: metadata.db
research/tick_vault_data/downloads/XAUUSD/2024/00/01/: 23h_ticks.bi5
research/tick_vault_data/downloads/XAUUSD/2024/00/02/: 01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  23h_ticks.bi5
research/tick_vault_data/downloads/XAUUSD/2024/00/03/: 01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  23h_ticks.bi5
research/tick_vault_data/downloads/XAUUSD/2024/00/04/: 01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  23h_ticks.bi5
research/tick_vault_data/downloads/XAUUSD/2024/00/05/: 01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5
research/tick_vault_data/downloads/XAUUSD/2024/00/07/: 23h_ticks.bi5
research/tick_vault_data/downloads/XAUUSD/2024/00/08/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  14h_ticks.bi5  15h_ticks.bi5  16h_ticks.bi5  17h_ticks.bi5  18h_ticks.bi5  19h_ticks.bi5  20h_ticks.bi5  21h_ticks.bi5  23h_ticks.bi5
research/tick_vault_data/downloads/XAUUSD/2024/00/09/: 00h_ticks.bi5  01h_ticks.bi5  02h_ticks.bi5  03h_ticks.bi5  04h_ticks.bi5  05h_ticks.bi5  06h_ticks.bi5  07h_ticks.bi5  08h_ticks.bi5  09h_ticks.bi5  10h_ticks.bi5  11h_ticks.bi5  12h_ticks.bi5  13h_ticks.bi5  (+9 more)
(+3193 files in other folders)
