[package]
name = "quantfund-dashboard"
version = "0.1.0"
edition = "2024"
description = "QuantFund real-time trading dashboard (Tauri v2)"

[package.metadata.tauri]
icons = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.ico"]

[[bin]]
name = "quantfund-dashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
quantfund-backtest = { path = "../../engine/backtest" }
quantfund-core     = { path = "../../engine/core" }
quantfund-data     = { path = "../../engine/data" }
quantfund-strategy = { path = "../../engine/strategy" }
quantfund-risk     = { path = "../../engine/risk" }
quantfund-execution = { path = "../../engine/execution" }
quantfund-mt5      = { path = "../../engine/mt5" }

tauri            = { version = "2", features = [] }
tauri-plugin-shell = { version = "2" }
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
rust_decimal     = { version = "1.37", features = ["serde-with-str"] }
rust_decimal_macros = "1.37"
tokio            = { version = "1.43", features = ["full"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
tokio-postgres   = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# MT5 connection
once_cell = "1.19"

# Finnhub API
reqwest = { version = "0.12", features = ["json"] }

# Environment variables
dotenv = "0.15"
