[package]
name = "quantfund-strategy"
version.workspace = true
edition.workspace = true

[dependencies]
quantfund-core = { workspace = true }
quantfund-events = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
